Made changes to the pmr_lcu

--- a/Floquet_IBM_new.ipynb
+++ b/Floquet_IBM_new.ipynb
@@ -2,28 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/y7/l21gv11s0fl71s2rjkzl_w1r0000gn/T/ipykernel_52188/3652294030.py:8: DeprecationWarning: The qiskit.extensions module is deprecated since Qiskit 0.46.0. It will be removed in the Qiskit 1.0 release.\n",
-      "  from qiskit.extensions import Initialize , UnitaryGate\n",
-      "/var/folders/y7/l21gv11s0fl71s2rjkzl_w1r0000gn/T/ipykernel_52188/3652294030.py:9: DeprecationWarning: Importing from 'qiskit.providers.aer' is deprecated. Import from 'qiskit_aer' instead, which should work identically.\n",
-      "  from qiskit.providers.aer import AerSimulator\n",
-      "/var/folders/y7/l21gv11s0fl71s2rjkzl_w1r0000gn/T/ipykernel_52188/3652294030.py:12: DeprecationWarning: The package qiskit_ibm_provider is being deprecated. Please see https://docs.quantum.ibm.com/api/migration-guides/qiskit-runtime to get instructions on how to migrate to qiskit-ibm-runtime (https://github.com/Qiskit/qiskit-ibm-runtime).\n",
-      "  from qiskit_ibm_provider import IBMProvider\n",
-      "/Users/armanbabakhani/Dropbox/Research/Itay/QuantumCircuits/Qiskit/Quantum_Circuit_Github/Quantum_Circuits_Floquet/pmr_lcu.py:86: SyntaxWarning: invalid escape sequence '\\o'\n",
-      "  \"\"\"\n",
-      "/Users/armanbabakhani/Dropbox/Research/Itay/QuantumCircuits/Qiskit/Quantum_Circuit_Github/Quantum_Circuits_Floquet/pmr_lcu.py:200: SyntaxWarning: invalid escape sequence '\\o'\n",
-      "  \"\"\"\"\n",
-      "/Users/armanbabakhani/Dropbox/Research/Itay/QuantumCircuits/Qiskit/Quantum_Circuit_Github/Quantum_Circuits_Floquet/pmr_lcu.py:229: SyntaxWarning: invalid escape sequence '\\o'\n",
-      "  \"\"\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import qiskit as qk\n",
     "import numpy as np\n",
@@ -40,7 +21,7 @@
     "from qiskit.quantum_info import SparsePauliOp\n",
     "from qiskit.primitives import BackendEstimator\n",
     "from qiskit import QuantumCircuit, Aer, transpile\n",
-    "from pmr_lcu import *"
+    "from pmr_lcu import B_prepare"
    ]
   },
   {
@@ -54,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,36 +49,33 @@
     "Vx = 1.0\n",
     "C = np.max(Coeffs)\n",
     "\n",
-    "Gammas = (1.0/2.0)*Coeffs\n",
+    "Gammas_i = Coeffs\n",
+    "Gammas_k = [0.5 , 0.5]\n",
     "Qmax = 2\n",
     "\n",
-    "# Defining the off-diagonal Gamma function \n",
-    "def Gamma_function(iq):\n",
-    "    G = (2 + (-1)**iq[0])\n",
-    "    q = len(iq)\n",
-    "    for j in np.arange(1,q):\n",
-    "        G = G*(2 + (-1)**iq[j])\n",
-    "    return G*(C0 / 2)**q\n",
-    "\n",
-    "Gam = np.sum([Gamma_function([x]) for x in np.arange(1, number_of_spins)])\n",
-    "Delta_t = np.log(2)/Gam\n",
-    "GDt = Gam*Delta_t"
+    "Gamma_1 = np.sum(Gammas_i)\n",
+    "Gamma_2 = np.sum(Gammas_k)\n",
+    "Gamma = Gamma_2 * Gamma_1\n",
+    "Delta_t = np.log(2)/Gamma\n",
+    "GDt = Gamma*Delta_t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Prepare_full_unitary() missing 4 required positional arguments: 'iq_qbits_index', 'z_qbits_index', 'q_qbit_index', and 'r_number'",
+     "ename": "ValueError",
+     "evalue": "could not broadcast input array from shape (2,2) into shape (1,1)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 22\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# =========================== Building the circuits  U_0(dt) U_od(dt) ... U_0(dt) U_od(dt) =================================== #\u001b[39;00m\n\u001b[1;32m     21\u001b[0m FullCirc \u001b[38;5;241m=\u001b[39m qk\u001b[38;5;241m.\u001b[39mQuantumCircuit( kqQubits , iqQubits , zQubits , ancQubit, qQubits )\n\u001b[0;32m---> 22\u001b[0m \u001b[43mPrepare_full_unitary\u001b[49m\u001b[43m(\u001b[49m\u001b[43m \u001b[49m\u001b[43mFullCirc\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkq_qbits_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43miq_qbits_index\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mz_qbits_index\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mq_qbits_index\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m Ops \u001b[38;5;241m=\u001b[39m SparsePauliOp\u001b[38;5;241m.\u001b[39mfrom_list([(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mI\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m*\u001b[39m(Nkq \u001b[38;5;241m+\u001b[39m Niq)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mXIII\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mI\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m*\u001b[39mQ , \u001b[38;5;241m1\u001b[39m) , (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mI\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m*\u001b[39m(Nkq \u001b[38;5;241m+\u001b[39m Niq)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIXII\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mI\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m*\u001b[39mQ , \u001b[38;5;241m1\u001b[39m) , (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mI\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m*\u001b[39m(Nkq \u001b[38;5;241m+\u001b[39m Niq)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mZIII\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mI\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m*\u001b[39mQ , \u001b[38;5;241m1\u001b[39m) , (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mI\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m*\u001b[39m(Nkq \u001b[38;5;241m+\u001b[39m Niq)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIZII\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mI\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m*\u001b[39mQ , \u001b[38;5;241m1\u001b[39m)])\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCircuit Prepared! The parameters are:  Vx = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mVx\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m , hs = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mLongit_h\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m , Omega = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mOmega\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m , C0 = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mC0\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m , Q = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mQ\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m , Gamma = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mGam\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m , Delta_t = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDelta_t\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m , GDt = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mGam\u001b[38;5;241m*\u001b[39mDelta_t\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m) \n",
-      "\u001b[0;31mTypeError\u001b[0m: Prepare_full_unitary() missing 4 required positional arguments: 'iq_qbits_index', 'z_qbits_index', 'q_qbit_index', and 'r_number'"
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[24], line 23\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# =========================== Building the circuits  U_0(dt) U_od(dt) ... U_0(dt) U_od(dt) =================================== #\u001b[39;00m\n\u001b[1;32m     22\u001b[0m FullCirc \u001b[38;5;241m=\u001b[39m qk\u001b[38;5;241m.\u001b[39mQuantumCircuit( kqQubits , iqQubits , zQubits , ancQubit, qQubits )\n\u001b[0;32m---> 23\u001b[0m \u001b[43mB_prepare\u001b[49m\u001b[43m(\u001b[49m\u001b[43mFullCirc\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQmax\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDelta_t\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mGammas_list\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkq_qbits_index\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43miq_qbits_index\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mq_qbits_index\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[43mdagger\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m#Prepare_full_unitary( FullCirc , number_of_spins , Qmax , current_time , Gamma_function , kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbit_index , r_number ):\u001b[39;00m\n\u001b[1;32m     25\u001b[0m \n\u001b[1;32m     26\u001b[0m \u001b[38;5;66;03m#Ops = SparsePauliOp.from_list([('I'*(Nkq + Niq)+'XIII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'IXII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'ZIII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'IZII'+'I'*Q , 1)])\u001b[39;00m\n\u001b[1;32m     27\u001b[0m \n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m#print(f'Circuit Prepared! The parameters are:  Vx = {Vx} , hs = {Longit_h} , Omega = {Omega} , C0 = {C0} , Q = {Q} , Gamma = {Gam} , Delta_t = {Delta_t} , GDt = {Gam*Delta_t}') \u001b[39;00m\n",
+      "File \u001b[0;32m~/Dropbox/Research/Itay/QuantumCircuits/Qiskit/Quantum_Circuit_Github/Quantum_Circuits_Floquet/pmr_lcu.py:143\u001b[0m, in \u001b[0;36mB_prepare\u001b[0;34m(Circuit, Q_max, Delta_t, Gamma_list, kq_qbits_idx, iq_qbits_idx, q_qbits_idx, dagger)\u001b[0m\n\u001b[1;32m    140\u001b[0m     MappingVecBk[\u001b[38;5;241m0\u001b[39m][i] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt( Gamma_k[i]\u001b[38;5;241m/\u001b[39mGamma_2 )\n\u001b[1;32m    142\u001b[0m \u001b[38;5;66;03m# The B_k rotations are controlled rotations!\u001b[39;00m\n\u001b[0;32m--> 143\u001b[0m UmapBkdag \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_unitary_map_from_vector\u001b[49m\u001b[43m(\u001b[49m\u001b[43mMappingVecBk\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mcontrol(\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m    144\u001b[0m UmapBk \u001b[38;5;241m=\u001b[39m create_unitary_map_from_vector(MappingVecBk , \u001b[38;5;28;01mFalse\u001b[39;00m)\u001b[38;5;241m.\u001b[39mcontrol(\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m    147\u001b[0m \u001b[38;5;66;03m# Generating the B_i(2) rotation:\u001b[39;00m\n",
+      "File \u001b[0;32m~/Dropbox/Research/Itay/QuantumCircuits/Qiskit/Quantum_Circuit_Github/Quantum_Circuits_Floquet/pmr_lcu.py:78\u001b[0m, in \u001b[0;36mcreate_unitary_map_from_vector\u001b[0;34m(vec, dagger)\u001b[0m\n\u001b[1;32m     76\u001b[0m U[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.0\u001b[39m\n\u001b[1;32m     77\u001b[0m unit \u001b[38;5;241m=\u001b[39m create_unitary(vec)\n\u001b[0;32m---> 78\u001b[0m \u001b[43mU\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m unit\n\u001b[1;32m     79\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dagger:\n\u001b[1;32m     80\u001b[0m     U \u001b[38;5;241m=\u001b[39m U\u001b[38;5;241m.\u001b[39mconj()\u001b[38;5;241m.\u001b[39mT\n",
+      "\u001b[0;31mValueError\u001b[0m: could not broadcast input array from shape (2,2) into shape (1,1)"
      ]
     }
    ],
@@ -105,7 +83,7 @@
     "K = 2     #only two modes -w and w\n",
     "Nkq = int(np.log2(K))*Qmax\n",
     "Niq = int(np.log2(number_of_spins))*Qmax\n",
-    "Ntotal = Nkq + Niq + n + 2 + Q\n",
+    "Ntotal = Nkq + Niq + number_of_spins + 2 + Qmax\n",
     "\n",
     "kqQubits = qk.QuantumRegister(Nkq , '|kq>')\n",
     "iqQubits = qk.QuantumRegister(Niq , '|iq>')\n",
@@ -121,14 +99,23 @@
     "\n",
     "FullCirc = qk.QuantumCircuit( kqQubits , iqQubits , zQubits , ancQubit , qQubits )\n",
     "\n",
+    "Gammas_list = [Gammas_i , Gammas_k]\n",
     "# =========================== Building the circuits  U_0(dt) U_od(dt) ... U_0(dt) U_od(dt) =================================== #\n",
     "FullCirc = qk.QuantumCircuit( kqQubits , iqQubits , zQubits , ancQubit, qQubits )\n",
-    "Prepare_full_unitary( FullCirc , number_of_spins , Qmax , current_time , Gamma_function , kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbit_index , r_number ):\n",
+    "B_prepare(FullCirc , Qmax , Delta_t , Gammas_list , kq_qbits_index , iq_qbits_index , q_qbits_index ,  dagger=False)\n",
+    "#Prepare_full_unitary( FullCirc , number_of_spins , Qmax , current_time , Gamma_function , kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbit_index , r_number ):\n",
     "\n",
-    "Ops = SparsePauliOp.from_list([('I'*(Nkq + Niq)+'XIII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'IXII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'ZIII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'IZII'+'I'*Q , 1)])\n",
+    "#Ops = SparsePauliOp.from_list([('I'*(Nkq + Niq)+'XIII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'IXII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'ZIII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'IZII'+'I'*Q , 1)])\n",
     "\n",
-    "print(f'Circuit Prepared! The parameters are:  Vx = {Vx} , hs = {Longit_h} , Omega = {Omega} , C0 = {C0} , Q = {Q} , Gamma = {Gam} , Delta_t = {Delta_t} , GDt = {Gam*Delta_t}') "
+    "#print(f'Circuit Prepared! The parameters are:  Vx = {Vx} , hs = {Longit_h} , Omega = {Omega} , C0 = {C0} , Q = {Q} , Gamma = {Gam} , Delta_t = {Delta_t} , GDt = {Gam*Delta_t}') "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
