Tested n=2 general state prep!

--- a/Floquet_IBM_new.ipynb
+++ b/Floquet_IBM_new.ipynb
@@ -2,9 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/armanbabakhani/Dropbox/Research/Itay/QuantumCircuits/Qiskit/Quantum_Circuit_Github/Quantum_Circuits_Floquet/PMR_LCU.py:94: SyntaxWarning: invalid escape sequence '\\o'\n",
+      "  \"\"\"\n",
+      "/Users/armanbabakhani/Dropbox/Research/Itay/QuantumCircuits/Qiskit/Quantum_Circuit_Github/Quantum_Circuits_Floquet/PMR_LCU.py:259: SyntaxWarning: invalid escape sequence '\\o'\n",
+      "  \"\"\"\"\n",
+      "/Users/armanbabakhani/Dropbox/Research/Itay/QuantumCircuits/Qiskit/Quantum_Circuit_Github/Quantum_Circuits_Floquet/PMR_LCU.py:288: SyntaxWarning: invalid escape sequence '\\o'\n",
+      "  \"\"\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<module 'PMR_LCU' from '/Users/armanbabakhani/Dropbox/Research/Itay/QuantumCircuits/Qiskit/Quantum_Circuit_Github/Quantum_Circuits_Floquet/PMR_LCU.py'>"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import qiskit as qk\n",
     "import numpy as np\n",
@@ -21,7 +44,9 @@
     "from qiskit.quantum_info import SparsePauliOp\n",
     "from qiskit.primitives import BackendEstimator\n",
     "from qiskit import QuantumCircuit, Aer, transpile\n",
-    "from pmr_LCU import *"
+    "import importlib\n",
+    "import PMR_LCU\n",
+    "importlib.reload(PMR_LCU)  # Reload to reflect updates"
    ]
   },
   {
@@ -35,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,77 +87,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mdisc is 0\n",
-      "inside of the permutation states unitary, the vec is [[1.]]\n",
-      "inside of the permutation states unitary, the vec is [[1.]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/armanbabakhani/Dropbox/Research/Itay/QuantumCircuits/Qiskit/qiskit_0.42/lib/python3.12/site-packages/numpy/linalg/linalg.py:2180: RuntimeWarning: divide by zero encountered in det\n",
-      "  r = _umath_linalg.det(a, signature=signature)\n",
-      "/Users/armanbabakhani/Dropbox/Research/Itay/QuantumCircuits/Qiskit/qiskit_0.42/lib/python3.12/site-packages/numpy/linalg/linalg.py:2180: RuntimeWarning: invalid value encountered in det\n",
-      "  r = _umath_linalg.det(a, signature=signature)\n",
-      "/Users/armanbabakhani/Dropbox/Research/Itay/QuantumCircuits/Qiskit/Quantum_Circuit_Github/Quantum_Circuits_Floquet/pmr_LCU.py:95: SyntaxWarning: invalid escape sequence '\\o'\n",
-      "  \"\"\"\n",
-      "/Users/armanbabakhani/Dropbox/Research/Itay/QuantumCircuits/Qiskit/Quantum_Circuit_Github/Quantum_Circuits_Floquet/pmr_LCU.py:272: SyntaxWarning: invalid escape sequence '\\o'\n",
-      "  \"\"\"\"\n",
-      "/Users/armanbabakhani/Dropbox/Research/Itay/QuantumCircuits/Qiskit/Quantum_Circuit_Github/Quantum_Circuits_Floquet/pmr_LCU.py:301: SyntaxWarning: invalid escape sequence '\\o'\n",
-      "  \"\"\"\n"
-     ]
-    },
-    {
-     "ename": "CircuitError",
-     "evalue": "'The amount of qubit(1)/clbit(0) arguments does not match the gate expectation (0).'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCircuitError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[62], line 23\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# =========================== Building the circuits  U_0(dt) U_od(dt) ... U_0(dt) U_od(dt) =================================== #\u001b[39;00m\n\u001b[1;32m     22\u001b[0m FullCirc \u001b[38;5;241m=\u001b[39m qk\u001b[38;5;241m.\u001b[39mQuantumCircuit( kqQubits , iqQubits , zQubits , ancQubit, qQubits )\n\u001b[0;32m---> 23\u001b[0m \u001b[43mB_prepare\u001b[49m\u001b[43m(\u001b[49m\u001b[43mFullCirc\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQmax\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDelta_t\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mGammas_list\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkq_qbits_index\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43miq_qbits_index\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mq_qbits_index\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[43mdagger\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m#Prepare_full_unitary( FullCirc , number_of_spins , Qmax , current_time , Gamma_function , kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbit_index , r_number ):\u001b[39;00m\n\u001b[1;32m     25\u001b[0m \n\u001b[1;32m     26\u001b[0m \u001b[38;5;66;03m#Ops = SparsePauliOp.from_list([('I'*(Nkq + Niq)+'XIII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'IXII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'ZIII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'IZII'+'I'*Q , 1)])\u001b[39;00m\n\u001b[1;32m     27\u001b[0m \n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m#print(f'Circuit Prepared! The parameters are:  Vx = {Vx} , hs = {Longit_h} , Omega = {Omega} , C0 = {C0} , Q = {Q} , Gamma = {Gam} , Delta_t = {Delta_t} , GDt = {Gam*Delta_t}') \u001b[39;00m\n",
-      "File \u001b[0;32m~/Dropbox/Research/Itay/QuantumCircuits/Qiskit/Quantum_Circuit_Github/Quantum_Circuits_Floquet/pmr_LCU.py:201\u001b[0m, in \u001b[0;36mB_prepare\u001b[0;34m(Circuit, Q_max, Delta_t, Gamma_list, kq_qbits_idx, iq_qbits_idx, q_qbits_idx, dagger)\u001b[0m\n\u001b[1;32m    199\u001b[0m     Circuit\u001b[38;5;241m.\u001b[39mcx(iq_qbits[i\u001b[38;5;241m*\u001b[39mLM] , q_qbits[i])\n\u001b[1;32m    200\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(Q):\n\u001b[0;32m--> 201\u001b[0m     \u001b[43mCircuit\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m\u001b[43m(\u001b[49m\u001b[43mUmapBi2\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43miq_qbits\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marange\u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mLM\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mLM\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Dropbox/Research/Itay/QuantumCircuits/Qiskit/qiskit_0.42/lib/python3.12/site-packages/qiskit/circuit/quantumcircuit.py:1290\u001b[0m, in \u001b[0;36mQuantumCircuit.append\u001b[0;34m(self, instruction, qargs, cargs)\u001b[0m\n\u001b[1;32m   1288\u001b[0m instructions \u001b[38;5;241m=\u001b[39m InstructionSet(resource_requester\u001b[38;5;241m=\u001b[39mrequester)\n\u001b[1;32m   1289\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(operation, Instruction):\n\u001b[0;32m-> 1290\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m qarg, carg \u001b[38;5;129;01min\u001b[39;00m \u001b[43moperation\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbroadcast_arguments\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexpanded_qargs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexpanded_cargs\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m   1291\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_dups(qarg)\n\u001b[1;32m   1292\u001b[0m         instruction \u001b[38;5;241m=\u001b[39m CircuitInstruction(operation, qarg, carg)\n",
-      "File \u001b[0;32m~/Dropbox/Research/Itay/QuantumCircuits/Qiskit/qiskit_0.42/lib/python3.12/site-packages/qiskit/circuit/gate.py:210\u001b[0m, in \u001b[0;36mGate.broadcast_arguments\u001b[0;34m(self, qargs, cargs)\u001b[0m\n\u001b[1;32m    173\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Validation and handling of the arguments and its relationship.\u001b[39;00m\n\u001b[1;32m    174\u001b[0m \n\u001b[1;32m    175\u001b[0m \u001b[38;5;124;03mFor example, ``cx([q[0],q[1]], q[2])`` means ``cx(q[0], q[2]); cx(q[1], q[2])``. This\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    207\u001b[0m \u001b[38;5;124;03m        arguments does not match the gate expectation.\u001b[39;00m\n\u001b[1;32m    208\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    209\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(qargs) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_qubits \u001b[38;5;129;01mor\u001b[39;00m cargs:\n\u001b[0;32m--> 210\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CircuitError(\n\u001b[1;32m    211\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe amount of qubit(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(qargs)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m)/clbit(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(cargs)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m) arguments does\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    212\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m not match the gate expectation (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_qubits\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m).\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    213\u001b[0m     )\n\u001b[1;32m    215\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;129;01mnot\u001b[39;00m qarg \u001b[38;5;28;01mfor\u001b[39;00m qarg \u001b[38;5;129;01min\u001b[39;00m qargs):\n\u001b[1;32m    216\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CircuitError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOne or more of the arguments are empty\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mCircuitError\u001b[0m: 'The amount of qubit(1)/clbit(0) arguments does not match the gate expectation (0).'"
+      "The Gammas are [array([1.]), [0.5, 0.5]]\n",
+      "The unitary built in create unitary is [[ 0.70710678  0.70710678]\n",
+      " [ 0.70710678 -0.70710678]]\n",
+      "The unitary built in create unitary is [[ 0.70710678  0.70710678]\n",
+      " [ 0.70710678 -0.70710678]]\n",
+      "The evolved state is [[(0.7191874465197123+7.151800912622856e-16j), 0], [(0.4233892537998104+1.2049272784730999e-17j), 20], [(0.4233892537998102+1.2049272784730971e-17j), 21], [(0.17624733778282453-1.8466017944796e-16j), 60], [(0.17624733778282442-1.6503402371441281e-16j), 61], [(0.1762473377828244-2.1409941304828079e-16j), 62], [(0.1762473377828243-2.33725568781828e-16j), 63]]\n",
+      "                                         ┌─────────┐           \n",
+      "|kq>_0: ─────────────────────────────────┤ Unitary ├───────────\n",
+      "                                         └────┬────┘┌─────────┐\n",
+      "|kq>_1: ──────────────────────────────────────┼─────┤ Unitary ├\n",
+      "        ┌────────────┐                        │     └────┬────┘\n",
+      "|iq>_0: ┤ Ry(1.5363) ├──────■─────────■───────■──────────┼─────\n",
+      "        └────────────┘┌─────┴──────┐  │                  │     \n",
+      "|iq>_1: ──────────────┤ Ry(1.0641) ├──┼───────■──────────■─────\n",
+      "                      └────────────┘┌─┴─┐     │                \n",
+      " |q>_0: ────────────────────────────┤ X ├─────┼────────────────\n",
+      "                                    └───┘   ┌─┴─┐              \n",
+      " |q>_1: ────────────────────────────────────┤ X ├──────────────\n",
+      "                                            └───┘              \n"
      ]
     }
    ],
    "source": [
-    "K = 2     #only two modes -w and w\n",
+    "K = 2     # only two modes -w and w\n",
+    "M = number_of_spins-1  # number of permutation operators\n",
     "Nkq = int(np.log2(K))*Qmax\n",
     "Niq = int(np.log2(number_of_spins))*Qmax\n",
     "Ntotal = Nkq + Niq + number_of_spins + 2 + Qmax\n",
     "\n",
     "kqQubits = qk.QuantumRegister(Nkq , '|kq>')\n",
     "iqQubits = qk.QuantumRegister(Niq , '|iq>')\n",
-    "zQubits = qk.QuantumRegister(number_of_spins + 1 , '|z>') # n+1 st is an ancilla for diagonal rotations!\n",
-    "ancQubit = qk.QuantumRegister(1 , '|anc>')\n",
+    "#zQubits = qk.QuantumRegister(number_of_spins + 1 , '|z>') # n+1 st is an ancilla for diagonal rotations!\n",
+    "#ancQubit = qk.QuantumRegister(1 , '|anc>')\n",
     "qQubits = qk.QuantumRegister(Qmax , '|q>')\n",
     "\n",
     "kq_qbits_index = 0\n",
     "iq_qbits_index = 1\n",
-    "z_qbits_index = 2\n",
+    "z_qbits_index = 2 \n",
     "anc_qbits_index = 3\n",
     "q_qbits_index = 4\n",
     "\n",
     "FullCirc = qk.QuantumCircuit( kqQubits , iqQubits , zQubits , ancQubit , qQubits )\n",
+    "Gammas_list = [ Gammas_i , Gammas_k ]\n",
     "\n",
-    "Gammas_list = [Gammas_i , Gammas_k]\n",
+    "print(f'The Gammas are {Gammas_list}')\n",
     "# =========================== Building the circuits  U_0(dt) U_od(dt) ... U_0(dt) U_od(dt) =================================== #\n",
-    "FullCirc = qk.QuantumCircuit( kqQubits , iqQubits , zQubits , ancQubit, qQubits )\n",
-    "B_prepare(FullCirc , Qmax , Delta_t , Gammas_list , kq_qbits_index , iq_qbits_index , q_qbits_index ,  dagger=False)\n",
+    "\n",
+    "#FullCirc = qk.QuantumCircuit( kqQubits , iqQubits , zQubits , ancQubit , qQubits )\n",
+    "FullCirc = qk.QuantumCircuit( kqQubits , iqQubits , qQubits )\n",
+    "kq_qbits_index = 0\n",
+    "iq_qbits_index = 1\n",
+    "q_qbits_index = 2 \n",
+    "\n",
+    "PMR_LCU.B_prepare( FullCirc , Qmax , Delta_t , Gammas_list , kq_qbits_index , iq_qbits_index , q_qbits_index ,  dagger=False )\n",
+    "\n",
+    "InitialState = PMR_LCU.make_initial_state([1,0,0,0] , number_of_spins , Qmax , M , K)\n",
+    "FinalState = InitialState.evolve(FullCirc)\n",
+    "FSnonzeros = [[FinalState[i] , i] for i in range(len(FinalState)) if abs(FinalState[i]) > 1E-6]\n",
+    "print(f'The evolved state is {FSnonzeros}')\n",
+    "\n",
+    "print(FullCirc.draw())\n",
     "#Prepare_full_unitary( FullCirc , number_of_spins , Qmax , current_time , Gamma_function , kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbit_index , r_number ):\n",
-    "\n",
     "#Ops = SparsePauliOp.from_list([('I'*(Nkq + Niq)+'XIII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'IXII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'ZIII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'IZII'+'I'*Q , 1)])\n",
-    "\n",
     "#print(f'Circuit Prepared! The parameters are:  Vx = {Vx} , hs = {Longit_h} , Omega = {Omega} , C0 = {C0} , Q = {Q} , Gamma = {Gam} , Delta_t = {Delta_t} , GDt = {Gam*Delta_t}') "
    ]
   },
