Updated the main library to generalize the off-diagonals

--- a/Floquet_IBM_new.ipynb
+++ b/Floquet_IBM_new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "<module 'PMR_LCU' from '/Users/armanbabakhani/Dropbox/Research/Itay/QuantumCircuits/Qiskit/Quantum_Circuit_Github/Quantum_Circuits_Floquet/PMR_LCU.py'>"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,12 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#====================== Circuit Paramters ================\n",
-    "number_of_spins = 2 # number of particles (qubits)\n",
+    "number_of_spins = 4 # number of particles (qubits)\n",
     "C0 = 1.0 # Parameter for the floquet interaction strength\n",
     "Coeffs = C0*np.array([2+(-1)**x for x in np.arange(1,number_of_spins)]) # there are n elements in this array\n",
     "Omega = 1.0\n",
@@ -87,32 +87,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Gammas are [array([1.]), [0.5, 0.5]]\n",
+      "The Gammas are [array([1., 3., 1.]), [0.5, 0.5]]\n",
       "The unitary built in create unitary is [[ 0.70710678  0.70710678]\n",
       " [ 0.70710678 -0.70710678]]\n",
       "The unitary built in create unitary is [[ 0.70710678  0.70710678]\n",
       " [ 0.70710678 -0.70710678]]\n",
-      "The evolved state is [[(0.7191874465197123+7.151800912622856e-16j), 0], [(0.4233892537998104+1.2049272784730999e-17j), 20], [(0.4233892537998102+1.2049272784730971e-17j), 21], [(0.17624733778282453-1.8466017944796e-16j), 60], [(0.17624733778282442-1.6503402371441281e-16j), 61], [(0.1762473377828244-2.1409941304828079e-16j), 62], [(0.1762473377828243-2.33725568781828e-16j), 63]]\n",
-      "                                         ┌─────────┐           \n",
-      "|kq>_0: ─────────────────────────────────┤ Unitary ├───────────\n",
-      "                                         └────┬────┘┌─────────┐\n",
-      "|kq>_1: ──────────────────────────────────────┼─────┤ Unitary ├\n",
-      "        ┌────────────┐                        │     └────┬────┘\n",
-      "|iq>_0: ┤ Ry(1.5363) ├──────■─────────■───────■──────────┼─────\n",
-      "        └────────────┘┌─────┴──────┐  │                  │     \n",
-      "|iq>_1: ──────────────┤ Ry(1.0641) ├──┼───────■──────────■─────\n",
-      "                      └────────────┘┌─┴─┐     │                \n",
-      " |q>_0: ────────────────────────────┤ X ├─────┼────────────────\n",
-      "                                    └───┘   ┌─┴─┐              \n",
-      " |q>_1: ────────────────────────────────────┤ X ├──────────────\n",
-      "                                            └───┘              \n"
+      "M is greater than 1\n",
+      "M is greater than 1\n",
+      "The unitary built in create unitary is [[ 0.70710678  0.70710678]\n",
+      " [ 0.70710678 -0.70710678]]\n",
+      "The unitary built in create unitary is [[ 0.70710678  0.70710678]\n",
+      " [ 0.70710678 -0.70710678]]\n",
+      "The evolved state is [[(0.9999999999999967+9.378044531667194e-16j), 0]]\n",
+      "                                         ┌─────────┐                       »\n",
+      "|kq>_0: ─────────────────────────────────┤ Unitary ├───────────────────────»\n",
+      "                                         └────┬────┘┌─────────┐            »\n",
+      "|kq>_1: ──────────────────────────────────────┼─────┤ Unitary ├────────────»\n",
+      "        ┌────────────┐                        │     └────┬────┘┌──────────┐»\n",
+      "|iq>_0: ┤ Ry(1.5363) ├──────■─────────■───────■──────────┼─────┤0         ├»\n",
+      "        └────────────┘      │         │                  │     │  Unitary │»\n",
+      "|iq>_1: ────────────────────┼─────────┼──────────────────┼─────┤1         ├»\n",
+      "                      ┌─────┴──────┐  │                  │     ├──────────┤»\n",
+      "|iq>_2: ──────────────┤ Ry(1.0641) ├──┼───────■──────────■─────┤0         ├»\n",
+      "                      └────────────┘  │       │                │  Unitary │»\n",
+      "|iq>_3: ──────────────────────────────┼───────┼────────────────┤1         ├»\n",
+      "                                    ┌─┴─┐     │                └──────────┘»\n",
+      " |q>_0: ────────────────────────────┤ X ├─────┼────────────────────────────»\n",
+      "                                    └───┘   ┌─┴─┐                          »\n",
+      " |q>_1: ────────────────────────────────────┤ X ├──────────────────────────»\n",
+      "                                            └───┘                          »\n",
+      "«                               ┌─────────┐                                   \n",
+      "«|kq>_0: ───────────────────────┤ Unitary ├───────────────────────────────────\n",
+      "«                    ┌─────────┐└────┬────┘                                   \n",
+      "«|kq>_1: ────────────┤ Unitary ├─────┼────────────────────────────────────────\n",
+      "«        ┌──────────┐└────┬────┘     │                         ┌─────────────┐\n",
+      "«|iq>_0: ┤0         ├─────┼──────────■───────■─────────■───────┤ Ry(-1.5363) ├\n",
+      "«        │  Unitary │     │                  │         │       └─────────────┘\n",
+      "«|iq>_1: ┤1         ├─────┼──────────────────┼─────────┼──────────────────────\n",
+      "«        ├──────────┤     │                  │  ┌──────┴──────┐               \n",
+      "«|iq>_2: ┤0         ├─────■──────────■───────┼──┤ Ry(-1.0641) ├───────────────\n",
+      "«        │  Unitary │                │       │  └─────────────┘               \n",
+      "«|iq>_3: ┤1         ├────────────────┼───────┼────────────────────────────────\n",
+      "«        └──────────┘                │     ┌─┴─┐                              \n",
+      "« |q>_0: ────────────────────────────┼─────┤ X ├──────────────────────────────\n",
+      "«                                  ┌─┴─┐   └───┘                              \n",
+      "« |q>_1: ──────────────────────────┤ X ├──────────────────────────────────────\n",
+      "«                                  └───┘                                      \n"
      ]
     }
    ],
@@ -135,7 +162,7 @@
     "anc_qbits_index = 3\n",
     "q_qbits_index = 4\n",
     "\n",
-    "FullCirc = qk.QuantumCircuit( kqQubits , iqQubits , zQubits , ancQubit , qQubits )\n",
+    "#FullCirc = qk.QuantumCircuit( kqQubits , iqQubits , zQubits , ancQubit , qQubits )\n",
     "Gammas_list = [ Gammas_i , Gammas_k ]\n",
     "\n",
     "print(f'The Gammas are {Gammas_list}')\n",
@@ -145,9 +172,11 @@
     "FullCirc = qk.QuantumCircuit( kqQubits , iqQubits , qQubits )\n",
     "kq_qbits_index = 0\n",
     "iq_qbits_index = 1\n",
-    "q_qbits_index = 2 \n",
+    "q_qbits_index = 2\n",
     "\n",
     "PMR_LCU.B_prepare( FullCirc , Qmax , Delta_t , Gammas_list , kq_qbits_index , iq_qbits_index , q_qbits_index ,  dagger=False )\n",
+    "PMR_LCU.B_prepare( FullCirc , Qmax , Delta_t , Gammas_list , kq_qbits_index , iq_qbits_index , q_qbits_index ,  dagger=True )\n",
+    "\n",
     "\n",
     "InitialState = PMR_LCU.make_initial_state([1,0,0,0] , number_of_spins , Qmax , M , K)\n",
     "FinalState = InitialState.evolve(FullCirc)\n",
