Checks finalized for n=2, and states from mathematica generated!

--- a/Finalized_tests.ipynb
+++ b/Finalized_tests.ipynb
@@ -212,6 +212,18 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing the simulations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
